# prompt_evaluator_dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: config.py  main.py  schemas.py  streamlit_app.py
src/db/: database.py  models.py
src/evaluator/: agent.py
src/frontend/: add_prompt.py  my_prompts.py
src/frontend/ui/: add_prompt.py  my_prompts.py  test_cases.py  view_test_cases.py
src/routes/: create_prompt.py  create_qa.py  evaluation.py  prompt_versions.py  prompts.py  results.py  test_cases.py
src/services/: add_test_case.py  display_prompt.py  update_prompt.py
src/utils/: post_req.py
