[project]
name = "prompt-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "psycopg-binary>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uuid>=1.30",
    "uvicorn>=0.40.0",
]
